--- a/YineBirCore/Views/Shared/_Layout.cshtml
+++ b/YineBirCore/Views/Shared/_Layout.cshtml
@@ -19,6 +19,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="../Home/MySpecialPage"> Yetkili</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="../Home/Urunler"> Ürünler</a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
