--- a/YineBirCore/Views/Home/Login.cshtml
+++ b/YineBirCore/Views/Home/Login.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" class="form-control" required/>
                 @*<span asp-validation-for="Password" class="text-danger"></span>*@
             </div>
             <div class="form-group">
